# leaf-flow-chat

./: .env.example  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yml  pyproject.toml
migrations/: env.py
src/chat_service/: __main__.py  app.py  config.py
src/chat_service/api/: deps.py
src/chat_service/api/middleware/: correlation_id.py  metrics.py
src/chat_service/application/: exceptions.py  uow.py
src/chat_service/application/dto/: conversation.py  events.py  message.py  principal.py
src/chat_service/application/policies/: permissions.py  rate_limit.py
src/chat_service/application/ports/: auth.py  bus.py  clock.py
src/chat_service/application/repositories/: conversation.py  message.py  outbox.py  participant.py  read_state.py
src/chat_service/domain/entities/: conversation.py  message.py  participant.py  read_state.py
src/chat_service/domain/events/: conversation_created.py  conversation_updated.py  message_created.py
src/chat_service/domain/value_objects/: enums.py  ids.py
src/chat_service/infrastructure/auth/: hs256_verifier.py  jwks_verifier.py
src/chat_service/infrastructure/bus/: redis_pubsub.py  (+2 more)
src/chat_service/scripts/: create_consumer_group.py  seed_dev_data.py
src/chat_service/services/: admin_service.py  conversation_service.py  message_service.py  read_state_service.py
src/chat_service/workers/: leaf_events_consumer.py  outbox_worker.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_admin_service.py  test_conversation_service.py  test_message_service.py
(+28 files in other folders)
