[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "leaf-flow-chat"
version = "0.1.0"
description = "LeafFlow Chat Microservice"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
  "asyncpg>=0.30,<1",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.11,<3",
  "SQLAlchemy[asyncio]>=2.0,<3",
  "fastapi>=0.115,<1",
  "alembic>=1.16,<2",
  "uvicorn[standard]>=0.34,<1",
  "psycopg2-binary>=2.9,<3",
  "PyJWT[crypto]>=2.10,<3",
  "httpx>=0.27,<1",
  "redis[hiredis]>=5.0,<6",
  "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "mypy>=1.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src/chat_service"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
